Fixed movie selection and adjusted area chart margins to prevent label from being cut off

--- a/css/style.css
+++ b/css/style.css
@@ -140,3 +140,7 @@ line.link:hover {
     color: #fff;
 }
 
+#node-link {
+    margin-left: 20px;
+}
+
